--- a/public/css/main.css
+++ b/public/css/main.css
@@ -64,3 +64,21 @@ body {
   flex-direction: column;
   font-size: 1.6rem;
 }
+
+.btn {
+  border-radius: 50px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.btn-primary {
+  background-color: #1ba2e2d4;
+  border-color: #1ba2e2d4;
+}
+
+.btn-outline-secondary {
+  color: #1ba2e2d4;
+  border-color: #1ba2e2d4;
+}
