--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Chirpper</title>
-  <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
+  crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
@@ -17,8 +17,8 @@
           <h1 class="LandingPage-signup__title">See what's happening in the world right now</h1>
           <h2 class="LandingPage-signup__subtitle">Join Chirpper today.</h2>
           <div class="LandingPage-signup-buttons">
-            <a class="LandingPage-signup-buttons__btn--primary" href="/createUser">Sign Up</a>
-            <a class="LandingPage-signup-buttons__btn--secondary" href="#">Log In</a>
+            <a class="btn btn-primary" href="/createUser">Sign Up</a>
+            <a class="btn btn-outline-secondary" href="#">Log In</a>
           </div>
         </div>
       </div>
