--- a/public/css/createUser.css
+++ b/public/css/createUser.css
@@ -1,3 +1,8 @@
+
+body{
+  background-color: #1ba2e2d4;
+}
+
 .wrapper {
   display: grid;
   width: 100%;
@@ -7,27 +12,33 @@
   grid-template-areas: 
     ".     .     ."
     ". container ."
-    ".     .     .";
+    ".     .     ."
 }
 
 .container {
   /* background-color: darkgray; */
   grid-area: container;
   width: 100%;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: left;
+  background-color: #FFF;
+  border-radius: 5px;
+  padding: 20px 40px 25px;
 }
 
 .fa-hand-lizard {
   align-self: center;
-  color: gray;
+  color: #1ba2e2d4;
 }
 
-h3 {
-  margin-top: 50px;
+h2 {
+  margin-top: 90px;
   margin-bottom: 30px;
+  font-weight: bold;
+  font-size: 2rem;
 }
 
 form {
@@ -39,7 +50,7 @@ form {
 form > input {
   width: 100%;
   padding: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
   border: none;
   border-bottom: 3px solid lightgray;
 }
@@ -48,14 +59,12 @@ input:focus,
 select:focus,
 textarea:focus {
     outline: none;
-    border-bottom: 3px solid lightblue;
+    border-bottom: 3px solid #1ba2e2d4;
 }
 
 form > input[type="submit"] {
-  padding: 14px;
-  width: 30%;
-  margin: auto;
-  margin-top: 30px;
-
+  align-self: center;
+  width: 40%;
+  
+  margin-top: 10px;
 }
-
