adding passport stuff

--- a/views/createUser.ejs
+++ b/views/createUser.ejs
@@ -20,8 +20,8 @@
           <form action="/createUser" method="POST"> 
               <!-- all of the value from createUser input is added to "user" object --> 
               <input type="email" name="user[email]" placeholder="E-mail" required>
-              <input type="text" name="user[username]" placeholder="Username" minlength="3" maxlength="12" required>
-              <input type="password" name="user[password]" placeholder="Password" minlength="5" required>
+              <input type="text" name="username" placeholder="Username" minlength="3" maxlength="12" required>
+              <input type="password" name="password" placeholder="Password" minlength="5" required>
               <input type="submit" class="btn btn-primary btn-sm">
           </form>
       </div> <!--End container-->
