Link login button on landing page to /login

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -18,7 +18,7 @@
           <h2 class="LandingPage-signup__subtitle">Join Chirpper today.</h2>
           <div class="LandingPage-signup-buttons">
             <a class="btn btn-primary" href="/createUser">Sign Up</a>
-            <a class="btn btn-outline-secondary" href="#">Log In</a>
+            <a class="btn btn-outline-secondary" href="/login">Log In</a>
           </div>
         </div>
       </div>
