--- a/views/createUser.ejs
+++ b/views/createUser.ejs
@@ -19,7 +19,7 @@
         <h2>Create your account</h2>
           <form action="/createUser" method="POST"> 
               <!-- all of the value from createUser input is added to "user" object --> 
-              <input type="email" name="user[email]" placeholder="E-mail" required>
+              <input type="email" name="email" placeholder="E-mail" required>
               <input type="text" name="username" placeholder="Username" minlength="3" maxlength="12" required>
               <input type="password" name="password" placeholder="Password" minlength="5" required>
               <input type="submit" class="btn btn-primary btn-sm">
