Display body of chirps

--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -48,7 +48,7 @@
           <ul>
             <% for (let i = 0; i < user.chirps.length; i++) { %>
               <li>
-                <%= user.chirps[i] %>
+                <%= user.chirps[i].body %>
               </li>
               <% } %>
           </ul>
