--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -43,6 +43,31 @@ div {
   height: 100%;
 }
 
+.header-items li {
+  display: inline;
+  list-style-type: none;
+  font-size: 16px; 
+}
+
+.fa-home {
+  font-size: 2em;
+  color: #5e5e5e;
+}
+
+.fa-hand-lizard {
+  align-self: center;
+  color: #1ba2e2d4;
+}
+
+.chirpButton {
+  background-color: #1ba2e2d4;
+  color: white;
+  border: none; 
+  font-size: 16px; 
+  border-radius: 42px;
+  padding: 6px 28px;
+}
+
 .heroColor-container {
   width: 100%;
   background-color: rgba(27, 162, 226, 1);
