Include username in timeline title

--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <!-- Enhancement Nice-to-have: add code to pull in name(if exists)/username to page title -->
-  <title>Chirpper</title> 
+  <title>@<%= user.username %> | Chirpper</title> 
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/timeline.css">
   <script src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
