--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -56,11 +56,11 @@ div {
 
 .fa-hand-lizard {
   align-self: center;
-  color: #1ba2e2d4;
+  color: #1BA2E2;
 }
 
 .chirpButton {
-  background-color: #1ba2e2d4;
+  background-color: #1BA2E2;
   color: white;
   border: none; 
   font-size: 16px; 
@@ -113,4 +113,29 @@ div {
 .timeline {
   width: 100%;
   height: 120vh;
+}
+
+.chirp-form {
+  background-color: #E4F4FC;
+  padding: 15px;
+  border-bottom: 1px solid #e6ecf0;
+  display: flex;
+  flex-direction: column;
+}
+
+.chirp-form__input {
+  border: 2px solid #B3D7E7;
+  border-radius: 10px;
+  font-size: 1.4rem;
+  height: 70px;
+  padding: 5px;
+  resize: none;
+}
+
+.chirp-form__button {
+  align-self: flex-end;
+  color: #FFF;
+  height: 35px;
+  margin-bottom: 0;
+  width: 80px;
 }
