--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -148,7 +148,6 @@ div {
 .chirp {
   border-bottom: 1px solid #e6ecf0;
   display: flex;
-  flex-direction: column;
   padding: 10px;
 }
 
@@ -156,23 +155,38 @@ div {
   font-size: 1.6rem;
 }
 
-.chirp__details {
+.chirp-user-pic {
+  background-color: #1BA2E2;
+  border-radius: 100%;
+  flex-shrink: 0;
+  height: 50px;
+  margin-right: 10px;
+  width: 50px;
+}
+
+.chirp-content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.chirp-content__details {
   color: #5e5e5e;
 }
 
-.chirp__details a {
+.chirp-content__details a {
   text-decoration: none;
 }
 
-.chirp__details a:hover {
+.chirp-content__details a:hover {
   text-decoration: underline;
   text-decoration-skip: ink;
 }
 
-.chirp__body {
+.chirp-content__body {
   margin-bottom: 10px;
 }
 
-.chirp__likes {
+.chirp-content__likes {
   color: #5e5e5e;  
 }
