--- a/views/createUser.ejs
+++ b/views/createUser.ejs
@@ -15,7 +15,9 @@
 
     <div class="wrapper">
       <div class="container">
-        <i class="fas fa-hand-lizard fa-2x" data-fa-transform="flip-h"></i> 
+          <a href="/">
+            <i class="fas fa-hand-lizard fa-2x" data-fa-transform="flip-h"></i>
+          </a>
         <h2>Create your account</h2>
           <form action="/createUser" method="POST"> 
               <!-- all of the value from createUser input is added to "user" object --> 
