--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,9 @@
 
     <div class="wrapper">
       <div class="container">
-        <i class="fas fa-hand-lizard fa-2x" data-fa-transform="flip-h"></i> 
+        <a href="/">
+          <i class="fas fa-hand-lizard fa-2x" data-fa-transform="flip-h"></i>
+        </a>
         <h2>Log in to Chirpper</h2>
           <form action="/login" method="POST"> 
               <input type="text" name="username" placeholder="Username" minlength="3" maxlength="12" required>
