--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -129,6 +129,19 @@ img {
   grid-gap: 10px;
 }
 
+
+.userProfileBar-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.editProfile-button {
+  text-align: center;
+}
+
+
 .profile-sidebar {
   padding-top: 40px;
   padding-left: 5%; 
@@ -143,7 +156,6 @@ img {
 .timeline {
   background-color: #FFF;
   width: 100%;
-  height: 120vh;
 }
 
 .chirp-form {
