--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -16,20 +16,25 @@
     <div class="topbar alignedToMainGrid">
       <ul>
         <li>
-          <a href="#"><i class="fas fa-home"></i> Home</a>
+          <% if (currentUser) { %>
+            <a href="/timeline/<%= currentUser.username %>"><i class="fas fa-home"></i> Home</a>
+          <% } else { %>
+            <a href="/"><i class="fas fa-home"></i> Home</a>
+          <%  } %>
         </li>
       </ul>
         <li>
-          <a href="#"><i class="fas fa-hand-lizard fa-2x" data-fa-transform="flip-h"></i></a>
+          <% if (currentUser) { %>
+            <a href="/timeline/<%= currentUser.username %>"><i class="fas fa-hand-lizard fa-2x" data-fa-transform="flip-h"></i></a>
+          <% } else { %>
+            <a href="/"><i class="fas fa-hand-lizard fa-2x" data-fa-transform="flip-h"></i></a>
+          <%  } %>
       </li>
       <ul class="header-right">
         <li>
           <% if (currentUser) { %>
           <a href="/logout">Logout</a>
           <% } %>
-        </li>
-        <li>
-          <a href="/userProfile">Profile</a>
         </li>
       </ul>
     </div>
@@ -47,7 +52,11 @@
       <div class="user-profile-bar alignedToMainGrid">
         <div class="userProfileBar-left"></div>
         <div class="userProfileBar-middle"></div>
-        <div class="userProfileBar-right"></div>
+        <div class="userProfileBar-right">
+          <% if (currentUser && (currentUser.username === user.username)) { %>
+            <a class="editProfile-button" href="/userProfile/<%=currentUser.username%>">Edit Profile</a>
+          <% } %>
+        </div>
       </div>
     </div>
    
@@ -63,13 +72,19 @@
             <i class="far fa-calendar-alt"></i>
             Joined <%= user.joinedDate.toLocaleDateString('en-US', {month: 'long', year: 'numeric'}) %>
           </li>
+          <% if (currentUser) { %>
+            <li> current user: <%= currentUser.username %> </li>
+          <% } %>
+          <li> requested user: <%= user.username %> </li>
         </ul>
       </div>
       <div class="timeline">
+        <% if (currentUser && (currentUser.username === user.username)) { %>
         <form action="/timeline/<%= user.username %>/createChirp" method="POST" class="chirp-form">
           <textarea name="newChirpBody" placeholder="What's happening?" maxlength="140" class="chirp-form__input"></textarea>
           <button class="btn btn-primary chirp-form__button">Chirp</button>
         </form>
+        <% } %>
         <ul>
           <% for (let i = 0; i < user.chirps.length; i++) { %>
             <li class="chirp">
