updated timeline css to better match twitter style

--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -22,6 +22,7 @@ body {
   position: fixed;
   top: 0;
   z-index: 100;
+  box-shadow: 0px 1px 2px rgba(0,0,0,.25);
 }
 
 .topbar {
@@ -65,7 +66,12 @@ body {
   padding: 6px 28px;
 }
 
+.sidebar-right {
+  margin-top: 10px;
+}
+
 .sidebar-right-gecko {
+  background-color: #fff;
   height: 300px; 
 } 
 
@@ -92,6 +98,7 @@ img {
 .heroColor-container {
   width: 100%;
   background-color: rgba(27, 162, 226, 1);
+  box-shadow: inset 0 0 1px 1px rgba(0,0,0,0.25);
 }
 
 .heroColor {
@@ -116,6 +123,7 @@ img {
   display: block;
   width: 100%;
   height: 60px;
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
 }
 
 .user-profile-bar {
@@ -150,8 +158,8 @@ img {
 }
 
 .timeline {
-  background-color: #FFF;
   width: 100%;
+  margin-top: 10px;
 }
 
 .chirp-form {
@@ -180,6 +188,7 @@ img {
 }
 
 .chirp {
+  background-color: #fff;
   border-bottom: 1px solid #e6ecf0;
   display: flex;
   padding: 10px;
