Include and position number of available characters in chirp form

--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -171,8 +171,21 @@ img {
   resize: none;
 }
 
+.chirp-form-bottom {
+  align-items: baseline;
+  display: flex;
+  justify-content: flex-end;
+}
+
+#available-chars {
+  color: #5e5e5e;
+  margin-left: 15px;
+  margin-right: 15px;
+  text-align: center;
+  width: 30px;
+}
+
 .chirp-form__button {
-  align-self: flex-end;
   color: #FFF;
   height: 35px;
   margin-bottom: 0;
