--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -136,5 +136,6 @@
     </div> <!--End: main-grid-->
   </div> <!--End: main-page-container -->
 
+  <script src="/js/characterCount.js"></script>
 </body>
 </html>
