--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -85,24 +85,28 @@
           <button class="btn btn-primary chirp-form__button">Chirp</button>
         </form>
         <% } %>
-        <ul>
-          <% for (let i = 0; i < user.chirps.length; i++) { %>
-            <li class="chirp">
-              <div class="chirp-user-pic"></div>
-              <div class="chirp-content">
-                <div class="chirp-content__details">
-                  <a href="/timeline/<%= user.username %>">@<%= user.username %>
-                  </a> 
-                  &middot; 
-                  <%= user.chirps[i].createdDate.toLocaleDateString('en-US', {month: 'short', day: 'numeric'}) %>
+        <% if (user.chirps.length < 1) { %>
+          <div class="noChirpsTimeline"> Waiting for <%=user.username%>'s first chirp!</div>
+        <% } else { %>
+          <ul>
+            <% for (let i = 0; i < user.chirps.length; i++) { %>
+              <li class="chirp">
+                <div class="chirp-user-pic"></div>
+                <div class="chirp-content">
+                  <div class="chirp-content__details">
+                    <a href="/timeline/<%= user.username %>">@<%= user.username %>
+                    </a> 
+                    &middot; 
+                    <%= user.chirps[i].createdDate.toLocaleDateString('en-US', {month: 'short', day: 'numeric'}) %>
+                  </div>
+                  <div class="chirp-content__body"><%= user.chirps[i].body %></div>
+                  <div class="chirp-content__likes"><i class="far fa-heart"></i> <%= user.chirps[i].numLikes %></div>
                 </div>
-                <div class="chirp-content__body"><%= user.chirps[i].body %></div>
-                <div class="chirp-content__likes"><i class="far fa-heart"></i> <%= user.chirps[i].numLikes %></div>
-              </div>
-            </li>
+              </li>
             <% } %>
-        </ul>
-      </div>
+            </ul>
+          <% } %>
+        </div>
       <div class="sidebar-right">
         <div class="sidebar-right-gecko">
           <img src="https://www.freeiconspng.com/uploads/lizard-icon-30.png" alt="Lizard Save Icon Format">
