--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,11 +19,13 @@
           <i class="fas fa-hand-lizard fa-2x" data-fa-transform="flip-h"></i>
         </a>
         <h2>Log in to Chirpper</h2>
+        <h6><a href="/createUser">(or click here to create a new Chirpper account)</a></h6>
           <form action="/login" method="POST"> 
               <input type="text" name="username" placeholder="Username" minlength="3" maxlength="12" required>
               <input type="password" name="password" placeholder="Password" minlength="5" required>
               <input type="submit" class="btn btn-primary btn-sm">
           </form>
+        
       </div> <!--End container-->
     </div> <!--End wrapper-->
    
