fixed bug where new chirps were not showing

--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -78,7 +78,7 @@
       </div>
       
       <div class="timeline">
-        <% if (currentUser && (currentUser.username === user.username)) { %>
+        <% if (currentUser && (currentUser.username === user.username) ) { %>
         <form action="/timeline/<%= user.username %>/createChirp" method="POST" class="chirp-form">
           <textarea name="newChirpBody" placeholder="What's happening?" maxlength="280" class="chirp-form__input" id="chirp-form__input"></textarea>
           <div class="chirp-form-bottom">
@@ -86,7 +86,8 @@
             <button class="btn btn-primary chirp-form__button">Chirp</button>
           </div>
         </form>
-        <% } else if (user.chirps.length < 1) { %>
+        <% } %>
+        <% if ((!currentUser || currentUser.username !== user.username) && user.chirps.length < 1) { %>
           <h4 class="noChirpsTimeline"><%=user.username%> has not chirped yet.</h4>
         <% } else { %>
           <ul>
