add userProfile and render to timeline

--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -60,8 +60,8 @@
    
     <div class="main-grid alignedToMainGrid">
       <div class="profile-sidebar">
-        <ul class=timeline-user-details>
-          <li>Full Name</li>
+        <ul class="timeline-user-details">
+          <li><%= user.profileData.firstLastName %></li>
           <li><a href="/timeline/<%= user.username %>">@<%= user.username %></a></li>
           <li>
             <i class="fas fa-map-marker-alt"></i>
